--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,12 @@ button{
     font-size: 2.5rem;
 }
 
+
+
+#Evento {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: larger;
+    margin-left: 300px;
+    margin-bottom: 300px;
+}
+
